fixed frame and white space bug

--- a/projects/vcf/assets/css/style.css
+++ b/projects/vcf/assets/css/style.css
@@ -7,18 +7,21 @@ Secondary Accent - 496B5-F (green blue color of original logo)
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
 
+html,
 body {
-    width: 100%;
+    max-width: 100vw;
     height: auto;
+    margin: 0;
+    padding: 0;
     background: #fff;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     font-size: 17px;
     line-height: 22px;
-    -webkit-box-sizing: border-box;
+    /*-webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    overflow-x: hidden;
+    box-sizing: border-box;*/
+    /*overflow-x: hidden;*/
 }
 h1,
 h2,
@@ -111,19 +114,27 @@ img {
     color: #103643;
 }
 .divider {
-    width: 100%;
+    max-width: 100vw;
     height: 50vh;
+    /*padding: 0;
+    margin: 0;*/
+    /*overflow: hidden;*/
 }
 #divider1 {
-    background: url(../img/background/4.jpg) center center no-repeat;
+    background: url(../img/background/4.jpg) center center fixed;
+    /*background-image: url(../img/background/4.jpg);*/
+    background-size: cover;
 }
 #divider2 {
-    background: url(../img/background/1.jpg) center center no-repeat;
+    background: url(../img/background/1.jpg) center center fixed;
+    background-size: cover;
 }
 #divider3 {
-    background: url(../img/background/3.jpg) center center no-repeat;
+    background: url(../img/background/3.jpg) center center fixed;
+    background-size: cover;
 }
 #header .main-navigation{
+    max-width: 100vw;
     background-color: #fff;
     border-bottom: 1px solid #496b5f;
 }
@@ -201,6 +212,8 @@ img {
     background: url(../img/background/2.jpg) center center no-repeat;
     background-size: cover;
     color: #fff;
+    /*width: 100vw;*/
+    max-width: 100vw;
     text-align: center;
     padding-top: 18vh;
     padding-bottom: 35vh;
@@ -208,7 +221,8 @@ img {
 }
 #intro .overlay {
     background: url(../img/background/bg-overlay.png) rgba(0, 0, 0, .6) repeat;
-
+    max-width: 100vw;
+    /*overflow: hidden;*/
 }
 #intro .main-text {
     padding: 0 20px;
@@ -395,7 +409,7 @@ img {
 }
 #footer {
     background-color: #fff;
-    width: 100%;
+    /*width: 100%;*/
     height: 28px;
 }
 .scroll-top {
